--- a/package.json
+++ b/package.json
@@ -1,45 +1,28 @@
 {
   "name": "@genedock/node-api-template",
-  "version": "1.0.0",
-  "description": "nodejs api template",
+  "version": "2.0.0",
+  "description": "nodejs api template koa2.x",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js --exec babel-node --presets es2015",
+    "start": "babel-node src/index.js",
     "test": "NODE_ENV=test istanbul cover _mocha -- --compilers js:babel-core/register"
   },
   "author": "zhoujinxiu",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "co": "^4.6.0",
-    "config": "^1.26.1",
-    "cors": "^2.8.3",
-    "express": "^4.15.2",
-    "express-session": "^1.15.5",
-    "jsonwebtoken": "^7.4.2",
-    "lodash": "^4.17.4",
-    "mkdirp": "^0.5.1",
-    "mongodb": "^2.2.27",
-    "mongoose": "^4.11.6",
-    "morgan": "^1.8.2",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1",
-    "rotating-file-stream": "^1.2.2",
-    "swagger-tools": "^0.10.1",
-    "winston": "^2.3.1"
+    "config": "^1.30.0",
+    "jsonwebtoken": "^8.2.1",
+    "koa": "^2.5.1",
+    "koa-body": "^2.5.0",
+    "koa-cors": "0.0.16",
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
     "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
     "istanbul": "1.1.0-alpha.1",
     "mocha": "^3.2.0",
-    "nodemon": "^1.11.0"
+    "supertest": "^3.1.0"
   }
 }
