--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^1.30.0",
+    "joi": "^13.3.0",
     "jsonwebtoken": "^8.2.1",
     "koa": "^2.5.1",
     "koa-body": "^2.5.0",
